fix(java): more V3 loader and lifecycle tests